--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Twittler</title>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
   </head>
   <body>
+    <section class="tweetbox"></section>  
     <script>
-
       $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
-
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
+        var $tweetbox = $('.tweetbox');
+        $tweetbox.html('');    
+        var index = 0;
+        var update = function() {
+          while(index < streams.home.length){
+            var tweet = streams.home[index];
+            var $tweet = $('<div class="tweet"></div>');
+            var $user = $('<a class="user" href="#"></a>');
+            var $message = $('<span class="message"></span>');
+            $user.text('@' + tweet.user);
+            $message.text(' - ' + tweet.message);
+            $tweet.append($user, $message);
+            $tweetbox.prepend($tweet);
+            index++; 
+          }
         }
-
+        var tweetStream = setInterval(update, 500);
       });
-
     </script>
   </body>
 </html>
