--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title>Twittler</title>
+    <link rel="stylesheet" href="main.css">
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
   </head>
   <body>
-    <section class="tweetbox"></section>  
+    <div class="container">
+      <section class="tweetbox"></section>  
+    </div>
     <script>
       $(document).ready(function(){
         var $tweetbox = $('.tweetbox');
@@ -20,7 +23,7 @@
             var $message = $('<span class="message"></span>');
             var $date = $('<span class="date"></span>');
             $user.text('@' + tweet.user);
-            $message.text(' - ' + tweet.message + ' ');
+            $message.text(tweet.message);
             $date.text(new Date);
             $tweet.append($user, $message, $date);
             $tweetbox.prepend($tweet);
